dark mode fixes

--- a/scss/_dark.scss
+++ b/scss/_dark.scss
@@ -9,9 +9,11 @@ body.theme-dark {
   .sidebar,
   .sidenav,
   .topnav,
-  .dropdown-menu {
+  .navbar,
+  .dropdown-menu,
+  .form-control {
     background: rgba(0, 0, 0, .1);
-    border-color: transparent;
+    color: inherit;
   }
 
   .text-default {
@@ -20,6 +22,10 @@ body.theme-dark {
 
   .avatar-list-stacked .avatar {
     box-shadow: 0 0 0 2px #2b3648;
+  }
+
+  .navbar-brand-logo {
+    filter: brightness(0) invert(1);
   }
 }
 
