--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -49,7 +49,7 @@ $text-color: #495057 !default;
 $text-muted: #888e9a !default;
 $text-muted-light: #adb5bd !default;
 
-$border-color: #e1e5ec !default;
+$border-color: rgba(0, 0, 0, 0.08) !default;
 
 $social-colors: (
   "facebook": #3b5998,
