--- a/scss/ui/_inputs.scss
+++ b/scss/ui/_inputs.scss
@@ -17,7 +17,7 @@ textarea {
 
 .form-control {
   &:-webkit-autofill {
-    -webkit-box-shadow: 0 0 0px 1000px #fff inset;
+    -webkit-box-shadow: 0 0 0 1000px #fff inset;
   }
 
   &:disabled,
@@ -38,7 +38,7 @@ textarea {
 
 .form-fieldset {
   padding: 1rem;
-  background: $gray-100;
+  background: $min-black;
   border: 1px solid $border-color;
   border-radius: $border-radius;
 }
