--- a/scss/ui/_tables.scss
+++ b/scss/ui/_tables.scss
@@ -1,8 +1,10 @@
 .table {
+  color: inherit;
+
   thead {
     th {
       border-width: $table-border-width;
-      background: $gray-100;
+      background: $min-black;
       text-transform: uppercase;
       font-size: $h6-font-size;
       font-weight: 600;
